# tictac

./: Cargo.toml  README.md
.github/workflows/: ci.yml
.run/: Bench.run.xml  Debug.run.xml
examples/: simple.rs
src/: lib.rs
