[package]
name = "tictac"
version = "0.0.0"
authors = ["Valentin Colin <valentin.colin78@gmail.com>"]
edition = "2021"
description = "A simple stopwatch."
homepage = "https://ValentinColin.github.io/tictac"
repository = "https://github.com/ValentinColin/tictac.git"
documentation = "https://docs.rs/ValentinColin/latest/tictac"
license = "MIT"
keywords = ["timer", "chrono"]

[dependencies]
log = "0.4.17"

[dev-dependencies]
env_logger = "0.9.0"
